2013-04-28  Matteo Cacciari <cacciari@lpthe.jussieu.fr> + Gregory

        * scripts/update-contribs.sh
	* scripts/internal/common.sh	
	* contribs.svn	
	replaced contribs.local with local_svn to avoid confusion with
	the name of the file that will eventually be used to contain
	local modifications to contribs.svn. 
	Fixed a regular expression in grep (allowing for mixture of spaces
	and tabs before the contrib name)
	Also reworded some comments.
	
	Added support for a contribs.local overriding default entries in
	contribs.svn. Added option to skip processing of a specific 
	contribution by scripts/update-contribs.sh, by replacing version
	number with any number of dashes.
	
2013-04-27  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * utils/check.sh
        Fixed a few typos in comments

2013-04-12  Gregory Soyez  <soyez@fastjet.fr>

	* NEWS:
	* VERSION:
	prepared for 1.002 release

	* contribs.svn:
	GenericSubtractor switched to version 1.1.0 (was 1.0.0)

2013-02-23  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS:
	* VERSION:
	prepared for 1.001 release

	* contribs.svn:
	added VariableR 1.0.1 and Nsubjettiness 1.0.2  (from Jesse Thaler)

	* configure:
	now outputs version of each contrib (+ other small formatting)

	* Makefile.in:
	distclean now removes Makefile and .Makefile.inc

2013-02-22  Gavin Salam  <gavin.salam@cern.ch>

	* utils/check.sh:
	now prints out the directory that it's running in

2013-02-21  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* DEVEL-GUIDELINES: 
	Rephrased sentence about registering a new contrib and the note
        note about retrieving a registered contrib using 
        scripts/update-contribs.sh ContribName trunk"


2013-02-21  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/Template/Makefile:
	added missing ; in make install

2013-02-21  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES: 
	added info on use of htpasswd to send us a password

	* scripts/internal/common.sh (svn_write): 